# expense-bot

./: .env.example  .gitignore  DEPLOY_GUIDE.md  DEVELOPMENT.md  Makefile  README.md  WORKSPACE_GUIDE.md  bun.lockb  package.json  tailwind.config.ts  vercel.json
.github/workflows/: ci-cd.yml  deploy-functions.yml
.ipynb_checkpoints/: README-checkpoint.md
.vercel/: project.json
backend/: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  pytest.ini  requirements-dev.txt  requirements.txt
backend/core/: expense_organizer.py
backend/firebase/: .firebaserc  (+3 more)
frontend/: .env.example  .gitignore  next.config.ts  package.json  tsconfig.json  vercel.json
infra/: .gcloudignore  .gitignore  README.md  cloudbuild-run.yaml  docker-compose.yml
notebooks/: .gitignore  train_paligemma.py  validation_output.jsonl
scripts/: README.md  build-and-push-images.sh  deploy-development.sh  deploy-production.sh  deploy.sh  destroy-environment.sh  dev-setup.sh  setup-github-actions-permissions.sh
src/: middleware.ts
src/server/: .env.example  .gitignore  Dockerfile  Dockerfile.llm  README.md  app.py  app.yaml  cloudbuild-llm.yaml  cloudbuild-run.yaml  cloudbuild.yaml  config.py  deploy.sh  pyproject.toml  requirements.txt
src/server/models/: schemas.py
src/server/services/: bank_sync_service.py  encryption_service.py  expense_bot.py  firebase_client.py  firebase_init.py  firebase_service.py  gemini_service.py  gemma2_service.py  google_drive_service.py  plaid_service.py  truelayer_service.py  webhook_service.py
src/server/tests/: test_firebase.py
(+165 files in other folders)
