[tool.poetry]
name = "expense-bot"
version = "0.1.0"
description = ""
authors = ["Abdul <abdulhakim.gafai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
plaid-python = ">=12.0.0"
quart = ">=0.18.4"
quart-cors = ">=0.7.0"
firebase-admin = ">=6.2.0"
python-dotenv = ">=1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
